--- a/comments.html
+++ b/comments.html
@@ -63,6 +63,39 @@
                             </p>
                         </div>
                     </li>
+
+                    <li class="main__item">
+                        <img src="img/content/old-asian.jpg" alt="tourist" class="main__item-img" width="160" height="160">
+                        <div class="main__item-text">
+                            <span class="main__item-date">01.02.2016</span>
+                            <span class="main__item-name">Александр Бельков</span>
+                            <p class="main__item-comment">
+                            Все понравилось, вежливые стюардессы, вовремя убирают, напитки предлагали 2 раза, а еду – 1 раз. Единственное, что не понравилось, как то мало места для ног, но с этим у меня часто проблема, рост 2,1м.
+                            </p>
+                        </div>
+                    </li>
+
+                    <li class="main__item">
+                        <img src="img/content/vector-smart-object.png" alt="no-photo" class="main__item-img" width="160" height="160">
+                        <div class="main__item-text">
+                            <span class="main__item-date">22.12.2015</span>
+                            <span class="main__item-name">Игорь Николаенко</span>
+                            <p class="main__item-comment">
+                            Не кормили вообще! Сказали, что это из-за того, что полет менее 2,5 часов. Но прибавьте к этому время регистрации в аэропорту. Летел с женой и мы очень проголодались. Просто имейте это ввиду, берите с собой хотя бы бутерброды, чипсы какие-то или печенье.
+                            </p>
+                        </div>
+                    </li>
+
+                    <li class="main__item">
+                        <img src="img/content/grendma.jpg" alt="woman" class="main__item-img" width="160" height="160">
+                        <div class="main__item-text">
+                            <span class="main__item-date">14.08.2015</span>
+                            <span class="main__item-name">Анастасия Порядная</span>
+                            <p class="main__item-comment">
+                            За такую цену просто все отлично! Кто недоволен, платите в 2 раза больше за аналогичные рейсы. Мне понравилось, что на борту было чисто, я аллергик и всегда чутко реагирую на пыль. Спасибо за полет! Рекомендую!
+                            </p>
+                        </div>
+                    </li>
                 </ui>
                 
                 
