--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru-RU">
 <head>
 	<meta charset="UTF-8">
 	<title>Airplanet-intro</title>
@@ -9,7 +9,7 @@
 	<div class="container">
 		<section class="main-block">
 			<img src="img/icons/logo-intro.png" alt="logo" class="main-block__logo">
-			<a href="comments.html" class="main-block__link">
+			<a href="about.html" class="main-block__link">
 				<span class="main-block__link-text">Перейти на сайт</span>
 				<img src="img/icons/main-icon-link.png" alt="" class="main-block__link-image">
 			</a>
