--- a/about.html
+++ b/about.html
@@ -80,12 +80,36 @@
 					</div>
 					<div class="partners">Партнёры</div>
 					<ul class="partners__list clearfix">
-						<li class="partners-item partners-item--left"><a href="#" class="partners-link"><img src="img/icons/bmp-company-logo.png" alt="bmp-company" class="partners-img"></a></li>
-						<li class="partners-item"><a href="#" class="partners-link"><img src="img/icons/eagle-logo.png" alt="terra-install" class="partners-img"></a></li>
-						<li class="partners-item partners-item--right"><a href="#" class="partners-link"><img src="img/icons/siberian-logo.png" alt="siberian-airlines" class="partners-img"></a></li><br>
-						<li class="partners-item partners-item--left"><a href="#" class="partners-link"><img src="img/icons/one-air-logo.png" alt="one-air" class="partners-img"></a></li>
-						<li class="partners-item"><a href="#" class="partners-link"><img src="img/icons/big-air-logo.png" alt="bing-air" class="partners-img"></a></li>
-						<li class="partners-item partners-item--right"><a href="#" class="partners-link"><img src="img/icons/ural-logo.png" alt="ural" class="partners-img"></a></li>
+						<li class="partners__item partners__item--left">
+							<a href="#" class="partners__link">
+								<img src="img/icons/bmp-company-logo.png" alt="bmp-company" class="partners-img">
+							</a>
+						</li>
+						<li class="partners__item">
+							<a href="#" class="partners__link">
+								<img src="img/icons/eagle-logo.png" alt="terra-install" class="partners-img">
+							</a>
+						</li>
+						<li class="partners__item partners__item--right">
+							<a href="#" class="partners__link">
+								<img src="img/icons/siberian-logo.png" alt="siberian-airlines" class="partners-img">
+							</a>
+						</li><br>
+						<li class="partners__item partners__item--left">
+							<a href="#" class="partners__link">
+								<img src="img/icons/one-air-logo.png" alt="one-air" class="partners-img">
+							</a>
+						</li>
+						<li class="partners__item">
+							<a href="#" class="partners__link">
+								<img src="img/icons/big-air-logo.png" alt="bing-air" class="partners-img">
+							</a>
+						</li>
+						<li class="partners__item partners__item--right">
+							<a href="#" class="partners__link">
+								<img src="img/icons/ural-logo.png" alt="ural" class="partners-img">
+							</a>
+						</li>
 					</ul>
 				</div>
 			</main>
