--- a/comments.html
+++ b/comments.html
@@ -52,9 +52,9 @@
 
                 <main class="content">
                 <div class="main__nav">
-                    <a href="#" class="main__nav-link">Главная</a> / Отзывы
+                    <a href="about.html" class="main__nav-link">Главная</a> / Отзывы
                 </div> 
-                <h1 class="main__title">Отзывы</h1>
+                <h1 class="title">Отзывы</h1>
                 <ui class="main__list">
                     <li class="main__item">
                         <img src="img/content/ugly-girl.png" alt="girl" class="main__item-img" width="160" height="160">
