--- a/crew.html
+++ b/crew.html
@@ -50,8 +50,67 @@
             </aside>
 
 
-            <main class="">
+            <main class="content">
+                    
+                <div class="team">
+                <div class="main__nav">
+                    <a href="about.html" class="main__nav-link">Главная</a> / Экипаж
+                </div>
+                    <div class="title">Экипаж</div>
                 
+
+                <ul class="team__list clearfix">
+                    <li class="team__item">
+                        <div class="team__sell">
+                            <img src="img/content/team-1.jpg" title="foto" class="team__foto">
+                            <div class="team__name">Белов Алексей Вадимович</div>
+                            <div class="team__role">Главный пилот</div>
+                            <div class="team__discription">Высокий профессионализм, честь и отвага – все это характеристики главного пилота Белова А.В. На его счету более 700 полетов. Награжден за мужество и отвагу указом президента.</div>
+                        </div>
+                    </li>
+                    <li class="team__item">
+                        <div class="team__sell">
+                            <img src="img/content/team-2.jpg" title="foto" class="team__foto">
+                            <div class="team__name">Сухарина Инна Николаевна</div>
+                            <div class="team__role">Бортпроводник</div>
+                            <div class="team__discription">Благодаря деятельности этого человека, на борту самолета клиенты чувствуют себя, как дома. Инна Николаевна чутко относится ко всем требованиям клиентов, очень любит детей и всячески помогает сделать полет комфортным и приятным.</div>
+                        </div>
+                    </li>
+                    <li class="team__item">
+                        <div class="team__sell">
+                            <img src="img/content/team-3.jpg" title="foto" class="team__foto">
+                            <div class="team__name">Лещ Борис Анатольевич</div>
+                            <div class="team__role">Авиатехник</div>
+                            <div class="team__discription">Человек с золотыми руками, инженер и конструктор от Бога! Борис Анатольевич работает уже более 50 лет и на своем веку видел, как из старых моделей самолетов появлялись настоящие авиа шедевры.</div>
+                        </div>
+                    </li>
+                    <li class="team__item">
+                        <div class="team__sell">
+                            <img src="img/content/team-4.jpg" title="foto" class="team__foto">
+                            <div class="team__name">Дигангидзе Элина Даниловна</div>
+                            <div class="team__role">Диспетчер</div>
+                            <div class="team__discription">Ей присущ внимательный подход к расчетам, а отменная память удивляет даже самых опытных членов экипажа. За 22 года работы она стажировала более 100 диспетчеров для работы в крупнейших аэропортах страны.  Знает в совершенстве 5 иностранных языков.</div>
+                        </div>
+                    </li>
+                    <li class="team__item">
+                        <div class="team__sell">
+                            <img src="img/content/team-5.jpg" title="foto" class="team__foto">
+                            <div class="team__name">Следь Елена Николаевна</div>
+                            <div class="team__role">Старший бортпроводник</div>
+                            <div class="team__discription">Вежливая улыбка, внимательность к деталям и большой опыт работы – это лишь малая часть достоинств Елены Николаевны. Старший бортпроводник задает тон всей поездке, поэтому клиенты, которые летят с ней, заряжаются отличным настроением и гармонией.</div>
+                        </div>
+                    </li>
+                    <li class="team__item">
+                        <div class="team__sell">
+                            <img src="img/content/team-6.jpg" title="foto" class="team__foto">
+                            <div class="team__name">Нестеренко Юрий Афанасьевич</div>
+                            <div class="team__role">Второй пилот</div>
+                            <div class="team__discription">Правая рука главного пилота, опытный и отважный помощник. О своей работе в шутку говорит так «Наше дело правое, не мешать левому». Опыт работы составляет 18 лет, внимательно относится ко всем деталям и считает свою работу – делом жизни.</div>
+                        </div>
+                    </li>
+                </ul>
+                </div>
+
             </main>
             <!-- </div> -->
         </section>
