--- a/index.html
+++ b/index.html
@@ -3,15 +3,33 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Airplanet-intro</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=1140">
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+	<!--[if lt IE 10]>
+
+    <p class="chromeframe">Похоже, что ты используешь
+
+    устаревший браузер, друг. Пожалуйста, <a href="http://
+
+    browsehappy.com/">скачай новый браузер абсолютно
+
+    бесплатно</a> или <a href="http://www.google.com/
+
+    chromeframe/?redirect=true">активируй Google Chrome Frame</
+
+    a></p>
+
+    <![endif]-->
+    
 	<div class="container">
 		<section class="main-block">
 			<img src="img/icons/logo-intro.png" alt="logo" class="main-block__logo">
 			<a href="about.html" class="main-block__link">
 				<span class="main-block__link-text">Перейти на сайт</span>
-				<img src="img/icons/main-icon-link.png" alt="" class="main-block__link-image">
+				<div class="main-block__link-image"></div>
 			</a>
 		</section>
 	</div>
