--- a/about.html
+++ b/about.html
@@ -5,12 +5,26 @@
 	<title>Airplanet-about</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=1140">
-	<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+	<!--[if lt IE 10]>
+
+    <p class="chromeframe">Похоже, что ты используешь
+
+    устаревший браузер, друг. Пожалуйста, <a href="http://
+
+    browsehappy.com/">скачай новый браузер абсолютно
+
+    бесплатно</a> или <a href="http://www.google.com/
+
+    chromeframe/?redirect=true">активируй Google Chrome Frame</
+
+    a></p>
+
+    <![endif]-->
+
 	<div class="wrapper">
-		<!-- HEADER -->
         <header class="header">
         	<div class="container clearfix">
         		<div class="header__left">
@@ -21,18 +35,19 @@
         		<div class="header__right">
         			<div class="contacts">
 	                    <a href="tel:88000039210" class="contacts__phone">8 (800) 00-392-10</a>
-	                    <a href="#" class="contacts__shedule">График работы</a>
+	                    <div class="contacts__elem">
+                            <a href="#" class="contacts__shedule">График работы</a>
+                            <div class="contacts__dropdown">
+                                <div class="contacts__time">пн-вс: 09:00-20:00</div>
+                                <div class="contacts__lunch">обед: 14:00-14:30</div>
+                            </div> 
+                        </div>
                 	</div>
         		</div>
         	</div>
         </header>
-
-		<!-- CENTER -->
         <section class="container clearfix">
 			<aside class="sidebar">
-
-
-
 				<nav class="menu">
                     <ul class="menu__list">
                         <li class="menu__item active"><a href="#" class="menu__link">
@@ -49,11 +64,7 @@
                         	</a></li>
                     </ul>
             	</nav>
-
-
-
 			</aside>
-
 			<main class="content">
 				<div class="about">
 					<img src="img/background/cloud-main-picture.jpg" alt="about" class="about__picture">
@@ -78,7 +89,7 @@
 							Бронировать билеты в нашей авиакомпании удобно. Для этого можно оставить <a href="#" class="reserv__link reserv__link--underline">заявку на сайте</a> или же позвонить по номеру круглосуточной поддержки <a href="tel:88000039210" class="reserv__link">8 (800) 00-392-10</a>.
 						</div>
 					</div>
-					<div class="partners">Партнёры</div>
+					<h2 class="partners__title">Партнёры</h2>
 					<ul class="partners__list clearfix">
 						<li class="partners__item partners__item--left">
 							<a href="#" class="partners__link">
@@ -115,11 +126,6 @@
 			</main>
 		</section>
 	</div>
-	
-
-
-
-	<!-- FOOTER -->
 	<footer class="footer">
 		<div class="container clearfix">
 
@@ -135,7 +141,6 @@
                 	<img src="img/icons/logo.png" alt="logo" class="logo__img">
             	</a>
 			</div>
-
 			<div class="footer__col">
 				<div class="socials">
 	            <div class="socials__text">Наши социальные сети</div>
@@ -168,7 +173,6 @@
 	            </ul>
 	        	</div>
 			</div>
-
 		</div>
     </footer>
 </body>
